--- a/quix.yaml
+++ b/quix.yaml
@@ -14,6 +14,9 @@ deployments:
       cpu: 8000
       memory: 8000
       replicas: 1
+    state:
+      enabled: true
+      size: 6
     desiredStatus: Stopped
     variables:
       - name: output
