'AI Customer/app.yaml' edited via Quix Portal

--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -26,6 +26,11 @@ variables:
     description: ''
     defaultValue: customer
     required: true
+  - name: director_name
+    inputType: FreeText
+    description: ''
+    defaultValue: director
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
