--- a/quix.yaml
+++ b/quix.yaml
@@ -207,7 +207,7 @@ deployments:
   - name: PromptController
     application: PromptController
     deploymentType: Service
-    version: 8c9e5e62d511c5c9529cdfbf79562b4bd282e41e
+    version: v1-director
     resources:
       cpu: 200
       memory: 500
