Reset conversation based on a preconfigured convservation length (#5)
* Add topic default

* Add certificates to gitignore.

* Minor uptdate to prompt.

* Clear memory on reaching max conversation length.

* Terminate conversation based on configured length.

* 'AI Customer/app.yaml' edited via Quix Portal

* Chat length type.

* Update deployment AI Customer

* Update deployment AI Support Agent

* Edited 'main.py'

* Modify chat length test and initialize chat to -1 to account for "good bye".

* Log line.

* Update deployment AI Customer

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Customer

* Update deployment AI Support Agent

* 'AI Customer/app.yaml' edited via Quix Portal

* Remove debug line.

* Update chat length as soon as a new message is received.

* Perform chat length checks on support agent's message.

* Update deployment AI Customer

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Code formatting.

* Code formatting.

---------

Co-authored-by: Sadeep Madurange <sadeep+demo@quix.io>
Co-authored-by: Sadeep Madurange <sadeep@quix.ai>
Co-authored-by: Quix Git Service <@quix>

--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: ''
     defaultValue: printer
     required: true
+  - name: conversation_length
+    inputType: FreeText
+    description: Maximum conversation length, after which the conversation resets.
+    defaultValue: 15
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
