Add deployment AI Support Agent

--- a/quix.yaml
+++ b/quix.yaml
@@ -34,6 +34,29 @@ deployments:
         description: Maximum conversation length, after which the conversation resets.
         required: true
         value: 15
+  - name: AI Support Agent
+    application: AI Customer Support Agent
+    deploymentType: Service
+    version: 23bcef29c7a677db0bcaf945f6456dff445772cb
+    resources:
+      cpu: 4000
+      memory: 8000
+      replicas: 1
+    state:
+      enabled: true
+      size: 6
+    desiredStatus: Running
+    variables:
+      - name: topic
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: ai-chat-history
+      - name: product
+        inputType: FreeText
+        description: ''
+        required: false
+        value: printer
 
 # This section describes the Topics of the data pipeline
 topics:
