--- a/quix.yaml
+++ b/quix.yaml
@@ -297,7 +297,7 @@ topics:
       retentionInMinutes: 10080
       retentionInBytes: 52428800
   - name: messages
-    persisted: false
+    persisted: true
     configuration:
       partitions: 8
       replicationFactor: 2
