--- a/Redis Sink/app.yaml
+++ b/Redis Sink/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: Redis host.
     defaultValue: redis_host
     required: true
+  - name: redis_port
+    inputType: FreeText
+    description: Redis port.
+    defaultValue: 15737
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
