Update deployment Sentiment Analyzer

--- a/quix.yaml
+++ b/quix.yaml
@@ -55,7 +55,7 @@ deployments:
       cpu: 2000
       memory: 4000
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
