--- a/Quix External Topic Connector/app.yaml
+++ b/Quix External Topic Connector/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: This is the output topic for hello world data
     defaultValue: hello-world-source
     required: true
+  - name: input
+    inputType: InputTopic
+    description: ''
+    defaultValue: ''
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
