--- a/Quix External Topic Connector/app.yaml
+++ b/Quix External Topic Connector/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: ''
     defaultValue: ''
     required: false
+  - name: external_token
+    inputType: Secret
+    description: ''
+    defaultValue: external_token
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
