'Quix External Topic Connector/app.yaml' edited via Quix Portal

--- a/Quix External Topic Connector/app.yaml
+++ b/Quix External Topic Connector/app.yaml
@@ -10,7 +10,7 @@ variables:
     inputType: InputTopic
     description: ''
     defaultValue: ''
-    required: false
+    required: true
   - name: external_token
     inputType: Secret
     description: ''
