'Quix External Topic Connector/app.yaml' edited via Quix Portal

--- a/Quix External Topic Connector/app.yaml
+++ b/Quix External Topic Connector/app.yaml
@@ -7,7 +7,7 @@ variables:
     defaultValue: hello-world-source
     required: true
   - name: input
-    inputType: InputTopic
+    inputType: FreeText
     description: ''
     defaultValue: ''
     required: true
