--- a/quix.yaml
+++ b/quix.yaml
@@ -150,7 +150,7 @@ topics:
       retentionInMinutes: 60
       retentionInBytes: 52428800
   - name: ai-chat-history-with-sentiment
-    persisted: true
+    persisted: false
     configuration:
       partitions: 1
       replicationFactor: 2
