--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -1,6 +1,11 @@
 name: Streamlit Dashboard
 language: python
-variables: []
+variables:
+  - name: redis_host
+    inputType: Secret
+    description: Redis server.
+    defaultValue: redis_host
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
