--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: Redis server.
     defaultValue: redis_host
     required: true
+  - name: redis_port
+    inputType: FreeText
+    description: Redis server port.
+    defaultValue: 15737
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
