--- a/quix.yaml
+++ b/quix.yaml
@@ -159,3 +159,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: chat-1
+    persisted: false
+    configuration:
+      partitions: 10
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
