--- a/Sentiment Analyzer/app.yaml
+++ b/Sentiment Analyzer/app.yaml
@@ -4,8 +4,8 @@ variables:
   - name: input
     inputType: InputTopic
     description: Name of the input topic to listen to.
-    defaultValue: ai-chat-history
-    required: false
+    defaultValue: chat-1
+    required: true
   - name: output
     inputType: OutputTopic
     description: Name of the output topic to write to.
