--- a/quix.yaml
+++ b/quix.yaml
@@ -152,3 +152,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: chat-2
+    persisted: false
+    configuration:
+      partitions: 10
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
