Move the style sheet path to env to support local runs.

--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -16,6 +16,11 @@ variables:
     description: Redis password.
     defaultValue: redis_pwd
     required: true
+  - name: style_sheet
+    inputType: FreeText
+    description: Custom style sheet.
+    defaultValue: style.css
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
