--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -16,6 +16,11 @@ variables:
     description: Redis password.
     defaultValue: redis_pwd
     required: true
+  - name: chat_count
+    inputType: FreeText
+    description: Maximum number of chats to display on the dashboard.
+    defaultValue: 12
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
