Streamlit dashboard skeleton (#11)
* Save file Streamlit Dashboard/app.yaml

* Created from Starter destination

* 'Streamlit Dashboard/app.yaml' edited via Quix Portal

* 'Streamlit Dashboard/app.yaml' edited via Quix Portal

* 'Streamlit Dashboard/app.yaml' edited via Quix Portal

* 'Streamlit Dashboard/app.yaml' edited via Quix Portal

* Install streamlit.

* Update dockerfile.

* Update docker file.

* Streamlit hello world.

* Created 'config.toml'

* Add streamlit config.

* Add deployment Streamlit Dashboard

* Page config.

* Upload 'favicon.ico'

* Page favicon.

* Update deployment Streamlit Dashboard

* Add columns.

* Install redis.

* Init redis.

* Use streaming data frames in the LLM agent and customer (#10)

* Update deployment Redis Sink

* Update deployment AI Customer

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Customer

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Support Agent

* Update deployment AI Customer

* Update deployment AI Support Agent

* Deleted application files from openblas_simple

* Deleted application files from open_llama

* Deleted application files from Llama2 Container

* Use SDF.

* Update deployment AI Customer

* Update deployment AI Customer

* Quixstreams version.

* Update deployment AI Customer

* Update deployment AI Customer

* Quix streams version.

* wip: SDF.

* Edited 'main.py'

* Edited 'main.py'

* Use SDF.

* Update deployment AI Support Agent

* Update deployment AI Customer

* Update deployment AI Customer

* Edited 'main.py'

* Edited 'main.py'

* Update deployment AI Customer

* Update deployment AI Customer

* Log received message.

* Update deployment AI Customer

* Log input message.

* Update deployment AI 

--- a/Streamlit Dashboard/app.yaml
+++ b/Streamlit Dashboard/app.yaml
@@ -1,19 +1,14 @@
-name: Redis Sink
+name: Streamlit Dashboard
 language: python
 variables:
-  - name: input
-    inputType: InputTopic
-    description: This is the input topic for demo data
-    defaultValue: ai-chat-history-with-sentiment
-    required: true
   - name: redis_host
     inputType: Secret
-    description: Redis host.
+    description: Redis server.
     defaultValue: redis_host
     required: true
   - name: redis_port
     inputType: Secret
-    description: Redis port.
+    description: Redis server port.
     defaultValue: redis_port
     required: true
   - name: redis_pwd
@@ -21,11 +16,16 @@ variables:
     description: Redis password.
     defaultValue: redis_pwd
     required: true
-  - name: expire_after
+  - name: chat_count
     inputType: FreeText
-    description: Conversation storage duration in minutes.
-    defaultValue: 1440
+    description: Maximum number of chats to display on the dashboard.
+    defaultValue: 12
     required: true
+  - name: style_sheet
+    inputType: FreeText
+    description: Custom style sheet for Streamlit.
+    defaultValue: style.css
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
