--- a/quix.yaml
+++ b/quix.yaml
@@ -40,7 +40,7 @@ deployments:
     state:
       enabled: true
       size: {{ ai_agent_state_size }}
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: topic
         inputType: OutputTopic
