--- a/quix.yaml
+++ b/quix.yaml
@@ -110,7 +110,7 @@ deployments:
   - name: Streamlit Dashboard
     application: Streamlit Dashboard
     deploymentType: Service
-    version: cbf485ae7288ceb82e6f1de5c27e58fe608ba764
+    version: 5c512afd5e22571693068b81069a23db4dec76b9
     resources:
       cpu: 200
       memory: 500
@@ -145,6 +145,16 @@ deployments:
         description: Custom style sheet for Streamlit.
         required: false
         value: style.css
+      - name: threshold_good
+        inputType: FreeText
+        description: Sentiment values greater than this value are considered 'Good'.
+        required: true
+        value: 0.25
+      - name: threshold_bad
+        inputType: FreeText
+        description: Sentiment values below which are considered 'Bad'.
+        required: true
+        value: -0.25
 
 # This section describes the Topics of the data pipeline
 topics:
