--- a/quix.yaml
+++ b/quix.yaml
@@ -162,3 +162,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 1440
       retentionInBytes: 52428800
+  - name: chat
+    persisted: false
+    configuration:
+      partitions: 16
+      replicationFactor: 2
+      retentionInMinutes: 1440
+      retentionInBytes: 52428800
