--- a/Sentiment Analyzer/app.yaml
+++ b/Sentiment Analyzer/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: input
     inputType: InputTopic
     description: Name of the input topic to listen to.
-    defaultValue: chat-1
+    defaultValue: chat
     required: true
   - name: output
     inputType: OutputTopic
