--- a/AI Customer Support Agent/app.yaml
+++ b/AI Customer Support Agent/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: topic
     inputType: OutputTopic
     description: This is the output topic to write data to
-    defaultValue: ai-chat-history
+    defaultValue: chat
     required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
