--- a/quix.yaml
+++ b/quix.yaml
@@ -46,7 +46,7 @@ deployments:
         inputType: OutputTopic
         description: This is the output topic to write data to
         required: true
-        value: chat
+        value: ai-chat-history
   - name: Sentiment Analyzer
     application: Sentiment Analyzer
     deploymentType: Service
