--- a/quix.yaml
+++ b/quix.yaml
@@ -17,7 +17,7 @@ deployments:
     state:
       enabled: true
       size: {{ ai_customer_state_size }}
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: topic
         inputType: OutputTopic
@@ -40,7 +40,7 @@ deployments:
     state:
       enabled: true
       size: {{ ai_agent_state_size }}
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: topic
         inputType: OutputTopic
@@ -55,7 +55,7 @@ deployments:
       cpu: 2000
       memory: 4000
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: InputTopic
@@ -80,7 +80,7 @@ deployments:
       cpu: 200
       memory: 500
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: InputTopic
@@ -118,7 +118,7 @@ deployments:
     publicAccess:
       enabled: true
       urlPrefix: dashboard
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: redis_host
         inputType: Secret
