--- a/AI Customer/prompt.yaml
+++ b/AI Customer/prompt.yaml
@@ -1,12 +1,12 @@
 _type: prompt
-input_variables:
-    ["history", "input"]
+input_variables: ["history", "input"]
 partial_variables:
-    product: place_holder
-    mood: place_holder
+  product: place_holder
+  mood: place_holder
 template: >
-    The following transcript represents a conversation between you, a {mood} customer of a large 
-    electronics retailer called 'ACME electronics', and a support agent who you are contacting 
-    to resolve an issue with a defective {product} you purchased. Your goal is try and 
-    understand what your options are for resolving the issue. Please continue the conversation.\n\n
-    Current conversation:\n{history}\nAGENT: {input}\nCUSTOMER:
+  The following text is the history of a chat between you and a support agent who you are contacting 
+  to resolve an issue with your defective {product}. Your goal is try and 
+  understand what your options are for resolving the issue. Acting as "CUSTOMER", please reply to the agent's most recent message 
+  in a {mood} tone of voice.
+  Do not include any unnecessary commentary or prefixes such as "Human:", "AI:", or "User:".\n\n
+  Current conversation:\n{history}\nAGENT: {input}\nCUSTOMER:
