--- a/AI Support Agent V2/prompt.yaml
+++ b/AI Support Agent V2/prompt.yaml
@@ -5,8 +5,8 @@ partial_variables:
     product: place_holder
     mood: place_holder
 template: >
-    The following transcript represents a conversation between you, a {mood} customer of a large 
-    electronics retailer called 'ACME electronics', and a support agent who you are contacting 
-    to resolve an issue with a defective {product} you purchased. Your goal is try and 
-    understand what your options are for resolving the issue. Please continue the conversation.\n\n
-    Current conversation:\n{history}\nAGENT: {input}\nCUSTOMER:
+    The following transcript represents a converstation between you, a customer 
+    support agent who works for a large electronics retailer called 'ACME electronics', 
+    and a customer who has bought a defective appliance and wants to understand what 
+    their options are for resolving the issue. Please continue the conversation.\n\n
+    Current conversation:\n{history}\nCUSTOMER: {input}\nAGENT:
